--- a/addon/styles/addon.scss
+++ b/addon/styles/addon.scss
@@ -1,3 +1,3 @@
-@import 'bourbon';
-@import 'frost/variables';
-@import 'frost-checkbox/styles';
+@import 'bower_components/bourbon/app/assets/stylesheets/bourbon';
+@import 'node_modules/frost-css/styles/frost/variables';
+@import './frost-checkbox';
