--- a/addon/styles/_frost-checkbox.scss
+++ b/addon/styles/_frost-checkbox.scss
@@ -13,7 +13,7 @@
 	  height: 20px;
 	  @include linear-gradient(white, $frost-color-lgrey-5);
 	  margin-right: 5px;
-	  border: 1px solid $frost-color-grey-6;
+	  border: 1px solid $frost-color-lgrey-1;
 	  vertical-align: middle;
 	  color: $frost-color-blue-1;
 	  content: "";
