--- a/addon/styles/addon.scss
+++ b/addon/styles/addon.scss
@@ -1,3 +1,4 @@
 @import 'bower_components/bourbon/app/assets/stylesheets/bourbon';
-@import 'node_modules/frost-css/styles/frost/variables';
+@import 'node_modules/ember-frost-css-core/scss/frost-core/_typography.scss';
+@import 'node_modules/ember-frost-theme/scss/_colors.scss';
 @import './frost-checkbox';
