--- a/addon/styles/_frost-checkbox.scss
+++ b/addon/styles/_frost-checkbox.scss
@@ -2,15 +2,16 @@
   display: inline-block;
   position: relative;
 
-  .input {
+  .input[type=checkbox] {
       position: absolute;
-      top: 5px;
-      left: 5px;
+      top: 2px;
+      left: 2px;
+      outline: none;
   }
 
   .input:focus + .label::before {
     border: 1px solid darken($frost-color-grey-6, 5%);
-    @include linear-gradient(lighten($frost-color-blue-1, 50%), lighten($frost-color-blue-1, 45%));
+    background-image: linear-gradient(lighten($frost-color-blue-1, 50%), lighten($frost-color-blue-1, 45%));
   }
 
   .label::before {
@@ -18,7 +19,7 @@
     position: relative;
     width: 20px;
     height: 20px;
-    @include linear-gradient(white, $frost-color-lgrey-5);
+    background-image: linear-gradient(white, $frost-color-lgrey-5);
     margin-right: 5px;
     border: 1px solid $frost-color-lgrey-1;
     vertical-align: middle;
@@ -34,9 +35,9 @@
     position: absolute;
     width: 20px;
     height: 20px;
-    top: 1px;
+    top: 0px;
+    left: 0px;
     fill: $frost-color-blue-1;
-    left: 2px;
   }
   
   .input:checked + .label svg {
@@ -48,6 +49,6 @@
     position: relative;
     font-size: $frost-font-s;
     color: $frost-color-grey-5;
-    @include user-select(none);
+    user-select: none;
   }
 }
