add style to hide default input checkbox

--- a/addon/styles/_frost-checkbox.scss
+++ b/addon/styles/_frost-checkbox.scss
@@ -1,12 +1,13 @@
 .frost-checkbox {
   display: inline-block;
   position: relative;
-  
+
   .input[type=checkbox] {
       position: absolute;
       top: 2px;
       left: 2px;
       outline: none;
+      display: none;
   }
 
   .input:focus + .label::before {
