--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -1,5 +1,9 @@
 @import 'node_modules/ember-frost-css-core/scss/frost-core';
 
+.dummy-body {
+  margin-left: 20px;
+}
+
 .dummy-notification-container {
   position: fixed;
   top: 60px;
